fix back button spacing #1818 #1819

--- a/src/scss/components/_link.scss
+++ b/src/scss/components/_link.scss
@@ -31,4 +31,9 @@
   &--force-underline {
     text-decoration: underline;
   }
+
+  &--icon {
+    display: inline-flex;
+    align-items: center;
+  }
 }
